[project]
name = "web-pointcloud-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "gradio>=5.35.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "pandas>=2.3.1",
    "pydeck>=0.9.1",
    "streamlit>=1.46.1",
]
